--- a/client/src/Components/Charts/style.scss
+++ b/client/src/Components/Charts/style.scss
@@ -1,5 +1,11 @@
 .chart {
-    width: 50%;
+    width: 100%;
     margin: auto;
     margin-top: 5rem;
+
+    p{
+        text-align: center;
+        font-size: 1.2rem;
+        color: #505050;
+    }
 }
