--- a/client/src/Components/Header/style.scss
+++ b/client/src/Components/Header/style.scss
@@ -1,37 +1,29 @@
-.header{
+.header {
     width: 100%;
     margin: 1rem auto;
 
-    nav{
+    nav {
         width: 50%;
         margin: auto;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
 
-        ul{
+        ul {
             display: flex;
             align-items: center;
             justify-content: space-between;
 
-            li{
-                flex: 1;
-                list-style: none;
+            li {
+               cursor: pointer;
+               padding: 10px 20px;
+               background: crimson;
+               color: #fff;
+               font-weight: 500;
+               font-size: 1.1rem;
+               border-radius: 4px;
 
-                a{
-                    text-decoration: none;
-                    font-size: 0.875rem;
-                    color: #404040;
-                    font-weight: 500;
 
-                    &:hover{
-                        text-decoration: underline;
-                        color: crimson;
-                    }
-                }
-                
-            }
-
-            .active_item{
-                text-decoration: underline;
-                color: crimson;
             }
         }
     }
