--- a/client/src/Components/Table/style.scss
+++ b/client/src/Components/Table/style.scss
@@ -1,5 +1,5 @@
 .table {
-    width: 50%;
+    width: 90%;
     margin: 1rem auto;
 }
 
@@ -11,6 +11,8 @@
 }
 
 table {
+    display: block;
+    overflow-x: auto;
     width: 100%;
     border-collapse: collapse;
     border: none !important;
@@ -25,6 +27,10 @@ table {
             padding: 10px;
             text-align: center;
             color: #404040;
+
+            svg {
+                font-size: 1.5rem;
+            }
         }
     }
 
@@ -35,9 +41,11 @@ table {
 
 .filter {
     input {
-        padding: 7px;
+        padding: 12px 7px;
         border: 1px solid #c7c7c7;
         border-radius: 4px;
+        width: 400px;
+        max-width: 100%;
     }
 }
 
@@ -48,7 +56,6 @@ table {
         padding: 0 !important;
         border: 1px solid #e7e7e7;
         justify-content: flex-start;
-        width: 111px;
         border-radius: 4px;
 
         li {
@@ -59,7 +66,7 @@ table {
             padding: 10px;
         }
 
-        button{
+        button {
             outline: none;
             background: transparent;
             border: 1px solid #e7e7e7;
@@ -71,7 +78,7 @@ table {
     }
 }
 
-.active{
+.active {
     background: #000;
     color: #fff;
     font-weight: 500;
